--- a/res/layout/activity_luancher.xml
+++ b/res/layout/activity_luancher.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-<!--     <ViewPc -->
-<!--         android:id="@+id/viewpager_launcher" -->
-<!--         android:layout_width="match_parent" -->
-<!--         android:layout_height="match_parent" /> -->
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_launcher"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <RelativeLayout
         android:layout_width="fill_parent"
