--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,8 +7,15 @@
     <FrameLayout  
         android:id="@+id/content_frame"  
         android:layout_width="match_parent"  
-        android:layout_height="match_parent" >  
+        android:layout_height="match_parent" > 
     </FrameLayout>  
+    
+    <TextView 
+        android:layout_width="wrap_content"  
+        android:layout_height="wrap_content"
+        android:text="这是首页"
+        android:textSize="26sp"
+        android:gravity="center"/>
   
     <!-- The navigation view -->  
     <ListView  
