--- a/res/layout/activity_luancher.xml
+++ b/res/layout/activity_luancher.xml
@@ -1,12 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="#FCF2E4">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_launcher"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -20,7 +21,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="30dp"
             android:gravity="center_horizontal"
-            android:orientation="horizontal" />
+            android:orientation="horizontal"/>
     </RelativeLayout>
 
 </RelativeLayout>
