--- a/res/layout/fragment_share.xml
+++ b/res/layout/fragment_share.xml
@@ -8,7 +8,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="这是首页"
+        android:text="这是分享界面"
         android:textSize="25sp" />
-
 </RelativeLayout>
