--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -3,6 +3,8 @@
     <!--
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+
+        Theme.AppCompat.Light.DarkActionBar
     -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
         <!--
