--- a/app/src/main/res/layout/fragment_selected_item.xml
+++ b/app/src/main/res/layout/fragment_selected_item.xml
@@ -3,7 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="5dp" >
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +32,7 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
@@ -40,7 +43,7 @@
             android:drawableLeft="@mipmap/ic_item_like"
             android:drawablePadding="3dp"
             android:gravity="center_vertical"
-            android:text="50" />
+            android:text="50"/>
 
         <TextView
             android:id="@+id/tv_comment"
