--- a/带你实现开发者头条APP(五)RecyclerView下拉刷新上拉加载/DeveloperHeadlines/app/src/main/res/layout/activity_luancher.xml
+++ b/带你实现开发者头条APP(五)RecyclerView下拉刷新上拉加载/DeveloperHeadlines/app/src/main/res/layout/activity_luancher.xml
@@ -1,27 +1,36 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FCF2E4" >
+    android:background="#FCF2E4">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_launcher"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/tv_start_headlines"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginBottom="60dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:background="@drawable/start_headlines_bg"
+        android:textColor="@color/launcher_item_select"
+        android:textSize="16sp"
+        android:visibility="gone"
+        android:text="开启我的头条"/>
+
+    <LinearLayout
+        android:id="@+id/viewGroup"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <LinearLayout
-            android:id="@+id/viewGroup"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="30dp"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal" />
-    </RelativeLayout>
-
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"/>
 </RelativeLayout>
